punto 3 y 5
